@@ -1,6 +1,9 @@
 Release 0.6.4 (in development)
 ==============================
 
+* #286: collect todo nodes after the whole document has been read;
+  this allows placing substitution references in todo items.
+
 * #294: do not ignore an explicit ``today`` config value in a
   LaTeX build.
 
